# CPS2004-OOP-Assignment

./: README.md
task1/task1b/: Aircraft.cpp  Aircraft.h  AppState.cpp  AppState.h  Book.cpp  Book.h  CMakeLists.txt  ComputerGame.cpp  ComputerGame.h  Customer.cpp  Customer.h  Electronics.cpp  Packaging.cpp  Packaging.h  Product.cpp  Product.h  SeaVessel.cpp  SeaVessel.h  Shipment.cpp  Shipment.h  Stock.cpp  Stock.h  StockItem.cpp  StockItem.h  Transport.cpp  Transport.h  Truck.cpp  Truck.h  main.cpp
task1/task1c/: application_state.ser  pom.xml
task1/task1c/src/main/java/com/task1c/: Aircraft.java  App.java  AppState.java  Book.java  Clothing.java  ComputerGame.java  Customer.java  Electronics.java  Packaging.java  Product.java  SeaVessel.java  Shipment.java  Stock.java  StockItem.java  Transport.java  Truck.java
task1/task1c/src/test/java/com/task1c/: AppTest.java
task2/task2/: application_state.ser
task2/task2/src/main/java/com/task2/: Aircraft.java  App.java  AppState.java  Book.java  Clothing.java  ComputerGame.java  Customer.java  Electronics.java  GlobalDiscountDecorator.java  MotorwayClosureDecorator.java  PFInterface.java  Packaging.java  Product.java  ProductFactory.java  SeaVessel.java  Shipment.java  ShipmentDecorator.java  ShipmentInterface.java  Stock.java  StockItem.java  TFInterface.java  Transport.java  TransportFactory.java  (+1 more)
task3/task3a_b/: pom.xml
task3/task3a_b/src/main/java/: logisticsManagement.proto
task3/task3c/: Book.cpp  CMakeLists.txt  Clothing.cpp  Clothing.h  ComputerGame.h  Electronics.h  Stock.cpp  Stock.h  main.cpp
(+28 files in other folders)
